--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ nav ul {
     padding: 0;
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 1em;
 }
 
 nav a {
@@ -36,8 +36,9 @@ nav a {
     color: var(--white-color);
     text-decoration: none;
     transition: background-color 0.3s ease;
+    font-size: 70%;
 }
 
 nav a:hover {
-    background-color: white;
+    border-radius: 5px;
 }
