--- a/styles.css
+++ b/styles.css
@@ -49,3 +49,26 @@ section {
     min-height: 400px;
     background-color: white;
 }
+
+#about-me {
+    display: flex;
+    flex-direction: column;
+    padding: 60px 20px;
+    min-height: 400px;
+}
+
+.paragraph-text {
+    font-size: 1.35rem;
+    max-width: 80%;
+}
+
+#about-me-paragraph-1 {
+    text-align: right;
+    margin-left: auto;
+    margin-bottom: 20px;
+}
+
+#about-me-paragraph-2 {
+    text-align: left;
+    margin-right: auto;
+}
