--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,9 @@ section {
 
 #projects-title {
     text-align: left;
-    font-size: 1.4rem;
+    font-size: 1.8rem;
+    text-align: center;
+    margin-bottom: 25px;
 }
 
 #projects {
