--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,9 @@ header {
     background-color: var(--blue-color);
     color: var(--white-color);
     padding: 0.5em;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 body {
